fix: reduce z-index hero__title::after

--- a/src/blocks/hero/hero.scss
+++ b/src/blocks/hero/hero.scss
@@ -59,7 +59,7 @@
       width: 31%;
       height: 37%;
       filter: blur(80px);
-      z-index: 0;
+      z-index: -1;
     }
   }
 
